--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@supabase/ssr": "^0.7.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.20",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.0",
     "next": "15.5.2",
+    "nodemailer": "^7.0.6",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.63.0",
     "tailwindcss": "3.4.13",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
