--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.0",
     "next": "15.5.2",
+    "next-cloudinary": "^6.16.0",
     "nodemailer": "^7.0.6",
     "postcss": "8.4.47",
     "react": "18.3.1",
