--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@supabase/ssr": "^0.7.0",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.20",
     "classnames": "^2.5.1",
@@ -22,16 +21,19 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.3",
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@types/node": "^22.7.4",
     "@types/nodemailer": "^7.0.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "eslint": "8.57.1",
-    "eslint-config-next": "15.5.2"
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.2",
+    "typescript-eslint": "^8.44.1"
   }
 }
