--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.20",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.0.0",
     "next": "15.5.2",
     "next-cloudinary": "^6.16.0",
