--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.20",
     "classnames": "^2.5.1",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/css-modules": "^1.0.5",
     "@types/node": "^22.7.4",
     "@types/nodemailer": "^7.0.1",
     "@types/react": "^18.3.12",
